# taro

./: Cargo.toml  README.md
.github/workflows/: rustdoc.yml
src/: lib.rs  main.rs  modules.rs
src/modules/: find.rs  gitignore.rs  grep.rs
