[package]
name = "taro-cli"
description = "Wrapper for multiple quality of life command-line tools."
version = "0.1.0"
edition = "2021"
authors = ["Boran Seckin <boran@boranseckin.com>"]
repository = "https://github.com/boranseckin/taro"
license = "MIT"
keywords = ["taro", "cli", "cli-tool", "grep", "search", "find", "gitignore"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "taro"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["blocking"] }
